--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.0",
     "sort-by": "^1.2.0",
+    "stripe": "^12.9.0",
     "sweetalert2": "^11.7.11"
   },
   "devDependencies": {
